assert-struct/tests/snapshots/field_operations__tuple_indexed_deref_mismatch.snap
---
source: assert-struct/tests/field_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/field_operations_errors/tuple_indexed_deref_mismatch.rs:17:38
   |
17 |         tuple_with_box: ("test", *1: 42),  // Should be 99, will fail
   |                                      ^^ got 99
